@@ -34,6 +34,17 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                    --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                    --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                    --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                    --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.6.0</version>
                 <executions>
